[GymHub] Reestilizando cores.

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <!-- Search Box -->
             <section id="search" class="alt">
               <form method="get" action="#">
-                <input type="text" name="search" id="search" placeholder="Search..." />
+                <input type="text" name="search" id="search" placeholder="Pesquisar..." />
               </form>
             </section>
               
@@ -239,8 +239,8 @@
 
             <!-- Footer -->
             <footer id="footer">
-              <p class="copyright">Copyright &copy; 2019 Company Name
-              <br>Designed by <a rel="nofollow" href="https://www.facebook.com/templatemo">Template Mo</a></p>
+              <p class="copyright">Copyright &copy; 2020 GymHub
+              <br>Designed by <a rel="nofollow" href="#">Template Mo</a></p>
             </footer>
 
           </div>
