--- a/simple_page.html
+++ b/simple_page.html
@@ -172,7 +172,7 @@
             <!-- Search Box -->
             <section id="search" class="alt">
               <form method="get" action="#">
-                <input type="text" name="search" id="search" placeholder="Search..." />
+                <input type="text" name="search" id="search" placeholder="Pesquisar..." />
               </form>
             </section>
               
