--- a/shortcodes.html
+++ b/shortcodes.html
@@ -168,12 +168,12 @@
                       <div class="row">
                         <div class="col-md-6">
                           <fieldset>
-                            <input name="name" type="text" class="form-control" id="name" placeholder="Your name..." required="">
+                            <input name="name" type="text" class="form-control" id="name" placeholder="Nome..." required="">
                           </fieldset>
                         </div>
                         <div class="col-md-6">
                           <fieldset>
-                            <input name="email" type="text" class="form-control" id="email" placeholder="Your email..." required="">
+                            <input name="email" type="text" class="form-control" id="email" placeholder="E-mail..." required="">
                           </fieldset>
                         </div>
                         <div class="col-md-12">
@@ -206,19 +206,19 @@
                         <div class="col-md-4 col-sm-4">
                           <div class="circle-item">
                             <input name="demo-priority" type="radio" id="demo-small" value="16-20" checked>
-                            <label for="demo-small">Age: 16 - 20</label>
+                            <label for="demo-small">Idade: 16 - 20</label>
                           </div>
                         </div>
                         <div class="col-md-4 col-sm-4">
                           <div class="circle-item">
                             <input name="demo-priority" type="radio" id="demo-medium" value="21-30">
-                            <label for="demo-medium">Age: 21 - 30</label>
+                            <label for="demo-medium">Idade: 21 - 30</label>
                           </div>
                         </div>
                         <div class="col-md-4 col-sm-4">
                           <div class="circle-item">
                             <input name="demo-priority" type="radio" id="demo-old" value="30+">
-                            <label for="demo-old">Age: 30+</label>
+                            <label for="demo-old">Idade: 30+</label>
                           </div>
                         </div>
                         <div class="col-12">
@@ -327,7 +327,7 @@
             <!-- Search Box -->
             <section id="search" class="alt">
               <form method="get" action="#">
-                <input type="text" name="search" id="search" placeholder="Search..." />
+                <input type="text" name="search" id="search" placeholder="Pesquisar..." />
               </form>
             </section>
               
