--- a/shortcodes.html
+++ b/shortcodes.html
@@ -334,7 +334,9 @@
             <!-- Menu -->
            <nav id="menu">
               <ul>
-                <li><a href="index.html">Homepage</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="">Planos</a></li>
+                <li><a href="">Produtos</a></li>
                 <li><a href="simple_page.html">Simple Page</a></li>
                 <li><a href="shortcodes.html">Shortcodes</a></li>
                 <li>
