[GymHub] Ajuste tela de cadastro.

--- a/cadastro.html
+++ b/cadastro.html
@@ -73,6 +73,19 @@
                           </fieldset>
                         </div>
                         
+                        <div class="col-md-6 col-sm-6">
+                          <div class="circle-item">
+                            <input name="demo-priority" type="radio" id="demo-small" value="16-20" checked>
+                            <label for="demo-small">Cliente</label>
+                          </div>
+                        </div>
+                        <div class="col-md-6 col-sm-6">
+                          <div class="circle-item">
+                            <input name="demo-priority" type="radio" id="demo-medium" value="21-30">
+                            <label for="demo-medium">Administrador</label>
+                          </div>
+                        </div>
+                        
                         <div class="col-md-12">
                           <button type="submit" id="form-submit" class="button">Enviar</button>
                         </div>
@@ -122,8 +135,7 @@
                     <li><a href="#">Sub Menu #2</a></li>
                     <li><a href="#">Sub Menu #3</a></li>
                   </ul>
-                </li>
-                <li><a href="https://www.google.com">External Link</a></li>
+                </li>                
               </ul>
             </nav>
 
