[GymHub] Adicionando planos e produtos.

--- a/login.html
+++ b/login.html
@@ -59,8 +59,8 @@
             <nav id="menu">
               <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="">Planos</a></li>
-                <li><a href="">Produtos</a></li>                
+                <li><a href="planos.html">Planos</a></li>
+                <li><a href="produtos.html">Produtos</a></li>           
                 <li><a href="simple_page.html">Simple Page</a></li>
                 <li><a href="shortcodes.html">Shortcodes</a></li>
                 <li>
