--- a/index.html
+++ b/index.html
@@ -32,8 +32,14 @@
 
             <!-- Header -->
             <header id="header">
-              <div class="logo">
+              <div class="col-md-3">                
+              </div>
+              <div class="logo col-md-6">
                 <a href="index.html">GymHub</a>
+              </div>              
+              <div class="col-md-3" style="text-align: right;">
+                <a class="alogin" href="cadastro.html">Registrar |</a>
+                <a class="alogin" href="login.html">Entrar</a>
               </div>
             </header>
 
