[GymHub] Cadastro Usuario.

--- a/gymhub/src/main/resources/static/index.html
+++ b/gymhub/src/main/resources/static/index.html
@@ -38,7 +38,7 @@
                 <a href="index">GymHub</a>
               </div>              
               <div class="col-md-3" style="text-align: right;">
-                <a class="alogin" href="cadastro">Registrar |</a>
+                <a class="alogin" href="usuarios">Registrar |</a>
                 <a class="alogin" href="login">Entrar</a>
               </div>
             </header>
