[GymHub] Ajustes menu.

--- a/gymhub/src/main/resources/static/index.html
+++ b/gymhub/src/main/resources/static/index.html
@@ -32,14 +32,8 @@
 
             <!-- Header -->
             <header id="header">
-              <div class="col-md-3">                
-              </div>
-              <div class="logo col-md-6">
-                <a href="index">GymHub</a>
-              </div>              
-              <div class="col-md-3" style="text-align: right;">
-                <a class="alogin" href="usuarios">Registrar |</a>
-                <a class="alogin" href="login">Entrar</a>
+              <div class="logo">
+                <a href="/">GymHub</a>
               </div>
             </header>
 
@@ -194,26 +188,18 @@
             <nav id="menu">
               <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="planos">Planos</a></li>
+                <li><a href="/mostraPlanos">Planos</a></li>
                 <li><a href="/mostraProdutos">Produtos</a></li>            
                 <li><a href="simple_page">Simple Page</a></li>
                 <li><a href="shortcodes">Shortcodes</a></li>
                 <li>
-                  <span class="opener">Dropdown One</span>
+                  <span class="opener">Cadastros</span>
                   <ul>
-                    <li><a href="#">First Sub Menu</a></li>
-                    <li><a href="#">Second Sub Menu</a></li>
-                    <li><a href="#">Third Sub Menu</a></li>
+                    <li><a href="/planosCadastro">Planos</a></li>
+                    <li><a href="/produtosVitrine">Produtos</a></li>
+                    <li><a href="/usuarios">Usuários</a></li>
                   </ul>
-                </li>
-                <li>
-                  <span class="opener">Dropdown Two</span>
-                  <ul>
-                    <li><a href="#">Sub Menu #1</a></li>
-                    <li><a href="#">Sub Menu #2</a></li>
-                    <li><a href="#">Sub Menu #3</a></li>
-                  </ul>
-                </li>                
+                </li>                             
               </ul>
             </nav>
 
